--- a/RL.html
+++ b/RL.html
@@ -1,6 +1,11 @@
 <br>
 <br>
 <br>
+<html>
+	<head>
+	<title></title>
+        <link rel="shortcut icon" type="image/x-icon" href="https://res.cloudinary.com/firstterm/image/upload/v1586824030/Digital%20Library/favicon.ico" />
+	</head>
 <div align="center">
     <table style="width: 700px; height: 315px;" cellspacing="0" cellpadding="0" border="0" align="center">
         <tbody>
@@ -47,7 +52,7 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div></html>
 <br>
 <br>
 <br>
